--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                         <li><i class="fas fa-envelope"></i> <span id="email">contact[at]hongwang.me</span></li>
                         <li><i class="fab fa-github"></i> <a target="_blank" href="https://github.com/H0NGWANG">H0NGWANG</a></li>
                         <li><i class="fab fa-linkedin"></i> <a target="_blank" href="https://www.linkedin.com/in/h0ngwang/">H0NGWANG</a></li>
+                        <li><i class="fas fa-pencil-alt"></i> <a target="_blank" href="https://blog.hongwang.me/">Blog</a></li>
                     </ul>
 
                     <p>I am a highly motivated, confident professional with
@@ -63,7 +64,7 @@
                         <div class="school">
                             <div class="upper-row">
                                 <h3 class="school-name">University of Georgia</h3>
-                                <div class="time">Intended Graduation - Dec. 2020</div>
+                                <div class="time">Graduation - Dec. 2020</div>
                             </div>
                             <div class="school-title">B.S. Computer Science, GPA 3.6 / 4.0</div>
 
