--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
                             </div>
                             <div class="school-title">B.S. Computer Science, GPA 3.6 / 4.0</div>
 
-                            <b>Relevant Coursework:</b> Data Structures, Software Development, Systems Programming, Web Programming, Discrete Math, Intro to Computing and Programming,
-                            Intro to Theory of Computing, Intro to Computational Science, Computing Ethics
+                            <b>Relevant Coursework:</b> Software Engineering, Data Structures, Software Development, Systems Programming, Mobile Software Development, Web Programming, Computer Architecture, Computer Networks, Discrete Math
                         </div>
                     </section>
 
@@ -79,11 +78,10 @@
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fas fa-wrench fa-stack-1x fa-inverse"></i>
                             </span>
-                            Skills and Proficiencies
+                            Technical Skills:
                         </h2>
-                        <b>Technical Skills:</b> Java, Python, C++, PHP, JavaScript, CSS, HTML<br>
-                        <b>Technologies:</b> Unix, AWS, Git, Emacs, Eclipse/IntelliJ, MATLAB, WordPress, Photoshop<br>
-                        <b>Languages:</b> English – Fluent, Chinese (Mandarin) – Fluent, Chinese (Fuzhou) – Fluent, Japanese – Intermediate<br>
+                        <b>Languages:</b> Java (Expert), Python (Expert), C++ (Prior experience), PHP, JavaScript, CSS, HTML<br>
+                        <b>Technologies:</b> Unix, Git, AWS, Android Studio, Docker, Django, MATLAB, Jupyter Notebook, WordPress<br>
                     </section>
 
                     <section>
@@ -96,15 +94,28 @@
                         </h2>
                         <div class="job">
                             <div class="upper-row">
+                                <h3 class="company">KidzToPros / Remote</h3>
+                                <div class="time">Apr. 2020 – Present</div>
+                            </div>
+                            <div class="job-title">Top-tier Instructor</div>
+
+                            <ul>
+                                <li>Instructor for KidzToPros’s Java Game Design, Minecraft Modding in Java, Python, Machine Learning, Web Design, Minecraft Design & Coding, and Graphic Design courses</li>
+                                <li>Responsible for teaching Java, Python, Machine Learning, JavaScript, HTML, CSS, etc</li>
+                            </ul>
+                        </div>
+
+                        <div class="job">
+                            <div class="upper-row">
                                 <h3 class="company">TPA Georgia / Athens, GA</h3>
                                 <div class="time">Aug. 2018 – Present</div>
                             </div>
-                            <div class="job-title">Intern</div>
+                            <div class="job-title">IT/Digital Marketing Manager</div>
 
                             <ul>
-                                <li>Built website using WordPress and improved site performance and security by utilizing various techniques such as CDN and leveraging browser caching.</li>
-                                <li>Increase website traffics with SEO and running ad campaigns on several ad platforms such as Google Ads.</li>
-                                <li>Design graphics such as logo, billboard, and business card using Photoshop.</li>
+                                <li>Built and Maintained TPA Georgia website using WordPress</li>
+                                <li>Launched and Maintained ad campaigns on several platforms including Google Ads and Facebook Ads</li>
+                                <li>Design graphics such as logo, billboard, and business card using Photoshop</li>
                             </ul>
                         </div>
 
@@ -116,8 +127,8 @@
                             <div class="job-title">Summer Intern</div>
 
                             <ul>
-                                <li>Developed a GUI for the partner portal of a multi-billion business called Aveda using TypeScript.</li>
-                                <li>Designed flyers and graphics, such as the logo, with a flat design style applied using Photoshop.</li>
+                                <li>Helped with partner portal development for Aveda using TypeScript to give partners exclusive resources access</li>
+                                <li>Integrated marketing automation platforms with Pipedrive CRM using PHP to help minimize costs and increase productivity</li>
                             </ul>
                         </div>
 
@@ -129,8 +140,8 @@
                             <div class="job-title">Summer Intern</div>
 
                             <ul>
-                                <li>Built a platform for Gwinnett county public school's central office to maintain relationships with partners using WordPress and EspoCRM.</li>
-                                <li>Created a custom WordPress plugin to provide integration with EspoCRM using PHP.</li>
+                                <li>Built the Gwinnett Academies website for the County public school's central office with WordPress</li>
+                                <li>Created a custom WordPress plugin using PHP to provide integration with EspoCRM</li>
                             </ul>
                         </div>
 
@@ -142,7 +153,7 @@
                             <div class="job-title">Analytics Trainee</div>
 
                             <ul>
-                                <li>Developed a GUI for Equifax, allowing users to generate various type of graph based on the data from MySQL database using PHP, MySQL, jQuery, and Bootstrap.</li>
+                                <li>Developed a GUI for Equifax, allowing users to generate various type of graph to help with visualizing the data from MySQL database using PHP, MySQL, Chart.js, jQuery, and Bootstrap</li>
                             </ul>
                         </div>
                     </section>
@@ -164,7 +175,7 @@
 
                             <ul>
                                 <li>Managed a section of the forum that has over two million registered users.</li>
-                                <li>Created contents and designed graphics such as banners and medals for the community.</li>
+                                <li>Organized activities and created Minecraft Java Modding tutorials.</li>
                                 <li>Developed a Minecraft MOD for textures with over ten-thousand downloads during the year of 2012 using Java, ModLoader API, and MCP.</li>
                             </ul>
                         </div>
