--- a/index.html
+++ b/index.html
@@ -166,6 +166,33 @@
                             </span>
                             Projects
                         </h2>
+
+                        <div class="job">
+                            <div class="upper-row">
+                                <h3 class="company">Roommates Shopping App</h3>
+                                <div class="time">Apr. 2020</div>
+                            </div>
+
+                            <ul>
+                                <li>Built an Android application with Android API level 16 that helps roommates to record shopping expenses</li>
+                                <li>Fully functioning user authentication, shopping list, and recently purchased list</li>
+                                <li>Implemented Firebase Authentication and Realtime Database for authenticating user, store, and retrieving data</li>
+                            </ul>
+                        </div>
+
+                        <div class="job">
+                            <div class="upper-row">
+                                <h3 class="company">Online Bookstore System [Full-Stack]</h3>
+                                <div class="time">Feb. 2020 – May. 2020</div>
+                            </div>
+
+                            <ul>
+                                <li>Built an Online Bookstore System using a Model-View-Template architecture with 3 other group members</li>
+                                <li>Helped implement user authentication, buying and selling books, and admin functionalities in Python using the Django framework</li>
+                                <li>Designed and built all the template layers using Bootstrap, jQuery, HTML, and CSS</li>
+                            </ul>
+                        </div>
+
                         <div class="job" style="margin-bottom:-15px;">
                             <div class="upper-row">
                                 <h3 class="company"><abbr title="Minecraft Bulletin Board System">MCBBS</abbr></h3>
@@ -195,7 +222,7 @@
                         </ul>
                         <h3>Academic Awards</h3>
                         <ul>
-                            <li>Dean's List - 4 Semesters</li>
+                            <li>Dean's List - 5 Semesters</li>
                             <li>Computer Science Student of the Year - 2016</li>
                             <li>“A” Team Award - 2014-15</li>
                             <li>Math Student of the Year - 2014-15</li>
