--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                             <ul>
                                 <li>Built an Android application with Android API level 16 that helps roommates to record shopping expenses</li>
                                 <li>Fully functioning user authentication, shopping list, and recently purchased list</li>
-                                <li>Implemented Firebase Authentication and Realtime Database for authenticating user, store, and retrieving data</li>
+                                <li>Implemented Firebase Authentication and Realtime Database to authenticate users, stores, and retrieves data</li>
                             </ul>
                         </div>
 
